--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.23.22",
     "next": "15.5.4",
     "next-mdx-remote": "^5.0.0",
+    "next-view-transitions": "^0.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
