--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.23.22",
     "next": "16.0.10",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
